Fix menu hamburger icon not showing

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -17,7 +17,6 @@ header.main {
       padding-bottom: 10px;
       padding-left: 10px;
       padding-right: 10px;
-      margin-top: -15px;
       position: absolute;
       width: 64px;
 
